--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: gray;
+            background-image: linear-gradient(rgb(187, 181, 181),rgb(68, 65, 65));
+            
             
         }
         .profile_img{
